<resources>
    <string name="app_name">Mobile Lotto</string>
    <string name="title_paired_devices">已配对</string>
    <string name="title_other_devices">New</string>
    <string name="scan">扫描</string>
    <string name="bluetooth_device_list">蓝牙设备列表</string>
    <string name="select_bluetooth_device">选择蓝牙设备</string>
    <string name="none_bluetooth_device_found">没有找到蓝牙设备</string>
    <string name="searching_bluetooth_devices">正在搜索附近的蓝牙设备</string>
    <string name="none_paired">未配对</string>
    <string name="scaning">扫描</string>
    <string name="usb_devices_list">USB设备列表</string>
    <string name="none_usb_device">没有USB设备</string>
    <string name="available_equipment">可用设备</string>
    <string-array name="baudrate">
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>115200</item>
    </string-array>
    <string name="str_no_serialport">该设备不支持串口</string>
    <string name="str_conn_state_disconnect">连接状态：未连接</string>
    <string name="str_conn_state_connecting">连接状态：连接中</string>
    <string name="str_connecting">连接中</string>
    <string name="str_conn_state_connected">连接状态：已连接</string>
    <string name="str_wifi_ip">请输入IP：</string>
    <string name="str_ip">IP: </string>
    <string name="str_port">Port: </string>
    <string name="str_wifi_port">请输入端口号：</string>
    <string name="str_state_query">状态查询</string>
    <string name="str_disconnect">断开连接</string>
    <string name="str_label_print">标签打印</string>
    <string name="str_receipt_print">票据打印</string>
    <string name="str_cpcl_print">面单打印</string>
    <string name="str_bluetooth_connect">蓝牙连接</string>
    <string name="str_usb_connect">USB连接</string>
    <string name="str_wifi_connect">wifi连接</string>
    <string name="str_serialport_connect">串口连接</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="cancel_search">取消搜索</string>
    <string name="str_cann_printer">请先连接打印机</string>
    <string name="str_bluetooth">蓝牙</string>
    <string name="str_serialport">串口</string>
    <string name="str_usb">USB</string>
    <string name="str_wifi">WIFI</string>
    <string name="str_conn_successful">连接成功！</string>
    <string name="str_conn_fail">连接失败！</string>
    <string name="str_baudrate">波特率：</string>
    <string name="str_serialport_path">串口路径：</string>
    <string name="str_conn_devices">多设备</string>
    <string name="str_conn_receipt_and_label_continuity_print">连续打印</string>
    <string name="str_address">地址：</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="disconnect">断开连接</string>
    <string name="cut">未连接</string>
    <string name="cutting">断开连接中...</string>
    <string name="str_disconn">断开</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="connecting">连接中...</string>
    <string name="port">接口:未设定 </string>
    <string name="init_port_info">地址:不详</string>
    <string name="str_enter_print_counts">请输入打印次数：</string>
    <string name="str_choice_printer_command">请选择正确的打印机指令</string>
    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_state">状态：</string>
    <string name="str_interface_undefine">接口：未设定</string>
    <string name="str_select_printer_id">选中id为{0}的打印机</string>
    <string name="bluetooth_is_not_enabled">蓝牙没有开启</string>
    <string-array name="str_interf_type">
        <item>蓝牙</item>
        <item>网口</item>
        <item>USB</item>
    </string-array>
    <string name="award_number">开奖号码：</string>
    <string name="award_level_details">开奖详情</string>
    <string name="award_level_count">中奖注数（注）</string>
    <string name="award_level_number">奖项</string>
    <string name="award_level_bonus">单注奖金</string>
    <string name="main_awarddetail">开奖信息</string>
    <string name="main_mylottery">电子选号</string>
    <string name="main_lottery">售彩</string>
    <string name="main_caishendao">站点查询</string>
    <string name="main_accounts">个人中心</string>
    <string name="main_consulting">资讯攻略</string>
    <string name="layout_weight">0dip</string>
    <string name="clear">清除全部</string>
    <string name="main_banks">基本资料</string>
    <string name="myinformation">绑定银行卡</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="daigou">确定</string>
    <string name="daigouxieyi">彩票购买协议 </string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松手刷新…</string>
    <string name="pull_to_refresh_tap_label">点击刷新…</string>
    <string name="pull_to_refresh_refreshing_label">载入中…</string>
    <string name="haomalan">%1$s投注 </string>
    <string name="caipiaozhifu">%1$s支付 </string>
    <string name="zhuihao_qishu">共%1$s期</string>
    <string name="zhuihao_yizhui">已追%1$s期</string>
    <string name="zhuihao_jin_e">追号金额    %1$s</string>
    <string name="zhuihao_shijian">开始时间    %1$s</string>
    <string name="bt_touzhu_qingchu">清除</string>
    <string name="bt_touzhu_fukuan">下一步</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="str_name_sjts">请输入手机号已接收验证码</string>
    <string name="str_name_sjtsk">请输入正确的手机号</string>
    <string name="str_name_yztsk">点击获取验证码按钮获取的验证码</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="recharges_time_">充值时间   %1$s</string>
    <string name="recharges_fee_money">手续费   %1$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">提示</string>
    <string name="alipay_goods_name">霁彩竞彩支付宝充值</string>
    <string name="wechat_goods_name">霁彩竞彩微信充值</string>
    <string name="capture_scan_tvtext">扫描电视二维码，通过电视投注</string>
    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="no_url">No mUrl</string>
    <string name="gd_jczq_spf">胜平负</string>
    <string name="gd_jczq_waiting">未开赛</string>
    <string name="gd_zc_bqc">半全场</string>
    <string name="gd_zc_jqc">进球彩</string>
    <string name="gd_zc_r9">任选九场</string>
    <string name="gd_zc_spf">胜负彩</string>
    <string name="gd_jczq_jqs">进球数</string>
    <string name="gd_jczq_bf">比分</string>
    <string name="gd_jczq_bqc">半全场</string>
    <string name="gd_jczq_hg">混关</string>
    <string name="jczq_detail_tip">*方案中赔率为实际出票赔率，计算奖金以此赔率为准。</string>
    <string name="recharges_prompt1">1、为防止恶意提款，洗钱的不法行为，每笔存用资金的30%必须用于实际消费，否则提款受限。</string>
    <string name="recharges_prompt2">2、部分银行卡到账时间为3-5分钟，若长时间未到账请联系客服400-669-0981</string>
    <string name="forgot_password">忘记密码</string>
    <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="errcode_success">登录成功</string>
    <string name="errcode_cancel">登录取消</string>
    <string name="errcode_deny">登录被拒绝</string>
    <string name="errcode_unknown">登录返回</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_deny">分享被拒绝</string>
    <string name="share_unknown">分享返回</string>
    <string name="produc_sugges">问题反馈</string>
    <string name="price_unit">克瓦查</string>
    <string name="sure_order">订单确认</string>
    <string name="near_result">近期开奖</string>
    <string name="random_selection">机选</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密 码</string>
    <string name="orderno">订单号：</string>
    <string name="order_no">订单号码：</string>
    <string name="gamename">游戏名称：</string>
    <string name="buytime">购买时间：</string>
    <string name="winstate">中奖状态：</string>
    <string name="refund">退票</string>
    <string name="order_money">订单金额</string>
    <string name="hezhi">和值</string>
    <string name="big">大</string>
    <string name="small">小</string>
    <string name="dan">单</string>
    <string name="shuang">双</string>
    <string name="fastselect">快速选号</string>
    <string name="kuai3_he_tip">猜中开奖号码之和，即中</string>
    <string name="add_zixuan">添加自选号码</string>
    <string name="clear_touzhu_list">清空投注列表</string>
    <string name="bei">倍</string>
    <string name="buy_is_agree">购买即同意《彩票服务协议》</string>
    <string name="tip">提示</string>
    <string name="is_clear_sure">是否要清空所有数据？</string>
    <string name="fou">否</string>
    <string name="shi">是</string>
    <string name="device_name">设备名称</string>
    <string name="device_jihuo">设备激活</string>
    <string name="device_no_tip">请输入设备编号</string>
    <string name="need_jihuo_tip">当前设备需要激活后方可使用，请输入设备编号进行激活</string>
    <string name="qi">期</string>
    <string name="logout">退出登录</string>
    <string name="card_no">卡 号</string>
    <string name="car_no_tip">请输入充值卡号</string>
    <string name="recharge">充值</string>
    <string name="recharge_account">充值账号</string>
    <string name="recharge_phone">充值手机</string>
    <string name="kefudianhua">客服电话</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="soft_update">软件更新</string>
    <string name="about_we">关于我们</string>
    <string name="bluetooth">蓝牙</string>
    <string name="no_contect">未连接</string>
    <string name="query_card_info">查询充值卡信息</string>
    <string name="pl5_tip">每位至少选一个</string>
    <string name="shake_tip">摇动手机也可以获得想要的号码哦</string>
    <string name="ad_tip">更多彩种更多玩法，随时随地想玩就玩</string>
    <string name="myticket">我的彩票</string>
    <string name="contine_buy">继续投注</string>
    <string name="feedback_tip">您有什么问题或者建议相对我们说？</string>
    <string name="update_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="batch_number">批次号</string>
    <string name="book_numbers">本号</string>
    <string name="total_rewards">兑奖总额</string>
    <string name="delivery_time">派送时间</string>
    <string name="benhao">本号</string>
    <string name="order_tracking">本号追踪</string>
    <string name="delivery_person">派送人</string>
    <string name="final_receiver">最终领取人</string>
    <string name="ultimate_recipient_parent">最终领取人父级</string>
    <string name="ultimate_recipient_parent_status">最终领取人父级结算状态</string>
    <string name="final_receiver_status">最终领取人结算状态</string>
    <string name="final_receiver_winning_amount">最终领取人兑奖金额</string>
    <string name="final_receiver_settlement_time">最终领取人结算时间</string>
    <string name="ultimate_recipient_parent_settlement_time">最终领取人父级结算时间</string>
    <string name="administrators_winning_amount">管理员兑奖金额</string>
    <string name="ultimate_recipient_parent_winning_amount">最终领取人父级兑奖金额</string>
</resources>