<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_gradient">

        <ImageView
            android:id="@+id/img_update_password_back"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/arrow_left_white" />

        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_password"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>


    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_corner_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_password_old"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textColorHint="@color/text66"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F3F3F3" />

        <EditText
            android:id="@+id/et_password_new"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textColorHint="@color/text66"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F3F3F3" />


        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textColorHint="@color/text66"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#F3F3F3" />


    </com.zhy.android.percent.support.PercentLinearLayout>

    <Button
        android:id="@+id/btn_password_submit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_add_zhuce"
        android:text="@string/str_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />
</com.zhy.android.percent.support.PercentLinearLayout>
