<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_tab_wei"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_type_one_panel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/main_color">

        <LinearLayout
            android:id="@+id/lly_track_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dip">

            <ImageView
                android:id="@+id/header_track_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="23dip"
                android:adjustViewBounds="true"
                android:paddingLeft="10dip"
                android:src="@drawable/arrow_left_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/header_type_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_tracking"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/order_tracking_et_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center|left"
        android:visibility="visible">

        <ImageView
            android:id="@+id/img_receiving_select_order"
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="5dip"
            android:adjustViewBounds="true"
            android:src="@drawable/settlement_qr" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_track_select"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/batch_number"
                android:textSize="14dip" />

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#CCCCCC" />

            <EditText
                android:id="@+id/et_track_select_two"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/book_numbers"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/tv_track_select"
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:layout_marginRight="20dip"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:src="@drawable/tracking_select" />
    </LinearLayout>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/lly_receiving_nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:visibility="visible">

        <ImageView
            android:id="@+id/img_reward_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dip"
            android:adjustViewBounds="true"
            android:src="@drawable/no_record"
            app:layout_widthPercent="75%sw" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <LinearLayout
        android:id="@+id/lly_track_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cash_prize_lly_bg"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/order_track_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/benhao"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_tracking_box_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_receiver"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_receiver_winning_amount"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_eleven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#1677FF"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_receiver_status"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#FFAB00"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_receiver_settlement_time"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultimate_recipient_parent"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultimate_recipient_parent_winning_amount"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultimate_recipient_parent_status"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultimate_recipient_parent_settlement_time"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_person"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_time"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administrators_winning_amount"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_rewards"
                android:textColor="#111111"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_tracking_twelve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#111111"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
